testsuite/tests/parser/should_fail/OpaqueParseFail2.hs
module OpaqueParseFail2 where

f = id
{-# OPAQUE SPECIALISE f :: Int -> Int #-}
