testsuite/tests/parser/should_fail/OpaqueParseFail2.stderr
OpaqueParseFail2.hs:4:12: error:
    parse error on input ‘SPECIALISE’
